Added crimes web map and editing widget

--- a/approot/templates/map.html
+++ b/approot/templates/map.html
@@ -1,7 +1,6 @@
 {% extends '_layout.html' %}
 
 {% block content %}
-<div id="map">
-</div>
+<div id="map"></div>
 <script src="{{ url_for('static', filename='scripts/map.js') }}"></script>
 {% endblock %}
