--- a/approot/templates/map.html
+++ b/approot/templates/map.html
@@ -2,5 +2,6 @@
 
 {% block content %}
 <div id="map"></div>
+<div id="chartPanel"><canvas id="chart" class="chart"></canvas></div>
 <script src="{{ url_for('static', filename='scripts/map.js') }}"></script>
 {% endblock %}
