--- a/approot/static/styles/app.css
+++ b/approot/static/styles/app.css
@@ -4,3 +4,10 @@ body { margin: 0; padding: 0; }
 	position: absolute;
 	top: 0; bottom: 0; right: 0; left: 0;
 }
+
+.chart {
+	background-color: white;
+	padding: 5px;
+	height: 280px;
+	width: 400px;
+}
